added checkboxes to each item in the table

--- a/pkmn_bdsp.html
+++ b/pkmn_bdsp.html
@@ -52,12 +52,22 @@
           </thead>
           <tbody>
             <tr>
-              <td>86</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck86" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck86">86</label>
+                </div>
+              </td>
               <td>Tower Master Ribbon</td>
               <td>Defeat Palmer in Master Class in the Battle Tower **Note: Can be done in SwSh</td>
             </tr>
             <tr>
-              <td>88</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck87" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck87">87</label>
+                </div>
+              </td>
               <td>Twinkling Star Ribbon</td>
               <td>Be the Star of the Show in BrilliantBD / ShiningSP Super Contest Master Rank</td>
             </tr>
@@ -78,107 +88,210 @@
           </thead>
           <tbody>
             <tr>
-              <td>47</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck47" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck47">47</label>
+                </div>
+              </td>
               <td>Sinnoh Champ Ribbon</td>
               <td>Defeat the Sinnoh Elite 4</td>
             </tr>
             <tr>
-              <td>60</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck60" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck60">60</label>
+                </div>
+              </td>
               <td>Coolness Master Ribbon</td>
               <td>Be the Star of the Show in Cool Super Contest Master Rank</td>
             </tr>
             <tr>
-              <td>61</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck61" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck61">61</label>
+                </div>
+              </td>
               <td>Beauty Master Ribbon</td>
               <td>Be the Star of the Show in Beauty Super Contest Master Rank</td>
             </tr>
             <tr>
-              <td>62</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck62" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck62">62</label>
+                </div>
+              </td>
               <td>Cuteness Master Ribbon</td>
               <td>Be the Star of the Show in Cuteness Super Contest Master Rank</td>
             </tr>
             <tr>
-              <td>63</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck63" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck63">63</label>
+                </div>
+              </td>
               <td>Cleverness Master Ribbon</td>
               <td>Be the Star of the Show in Cleverness Super Contest Master Rank</td>
             </tr>
             <tr>
-              <td>64</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck64" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck64">64</label>
+                </div>
+              </td>
               <td>Toughness Ribbon</td>
               <td>Be the Star of the Show in Toughness Super Contest Master Rank</td>
             </tr>
             <tr>
-              <td>65</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck65" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck65">65</label>
+                </div>
+              </td>
               <td>Contest Star Ribbon</td>
               <td>Win the above 5 ribbons</td>
             </tr>
             <tr>
-              <td>72</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                </div>
+              </td>
               <td>Effort Ribbon</td>
               <td>Show mon with 510 EVs at Sunyshore Market</td>
             </tr>
             <tr>
-              <td>73</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck73" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck73">73</label>
+                </div>
+              </td>
               <td>Alert Ribbon</td>
               <td>Show mon on Monday in Sunyshore City</td>
             </tr>
             <tr>
-              <td>74</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck74" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck74">74</label>
+                </div>
+              </td>
               <td>Shock Ribbon</td>
               <td>Show mon on Tuesday in Sunyshore City</td>
             </tr>
             <tr>
-              <td>75</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck75" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck75">75</label>
+                </div>
+              </td>
               <td>Downcast Ribbon</td>
               <td>Show mon on Wednesday in Sunyshore City</td>
             </tr>
             <tr>
-              <td>76</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck76" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck76">76</label>
+                </div>
+              </td>
               <td>Careless Ribbon</td>
               <td>Show mon on Thursday in Sunyshore City</td>
             </tr>
             <tr>
-              <td>77</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck77" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck77">77</label>
+                </div>
+              </td>
               <td>Relax Ribbon</td>
               <td>Show mon on Friday in Sunyshore City</td>
             </tr>
             <tr>
-              <td>78</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck78" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck78">78</label>
+                </div>
+              </td>
               <td>Snooze Ribbon</td>
               <td>Show mon on Saturday in Sunyshore City</td>
             </tr>
             <tr>
-              <td>79</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck79" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck79">79</label>
+                </div>
+              </td>
               <td>Smile Ribbon</td>
               <td>Show mon on Sunday in Sunyshore City</td>
             </tr>
             <tr>
-              <td>80</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck80" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck80">80</label>
+                </div>
+              </td>
               <td>Gorgeous Ribbon</td>
               <td>Buy for 10,000 pokemonies at the Ribbon Syndicate; located in Resort Area</td>
             </tr>
             <tr>
-              <td>81</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck81" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck81">81</label>
+                </div>
+              </td>
               <td>Royal Ribbon</td>
               <td>Buy for 100,000 pokemonies at the Ribbon Syndicate; located in the Resort Area</td>
             </tr>
             <tr>
-              <td>82</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck82" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck82">82</label>
+                </div>
+              </td>
               <td>Gorgeous Royal Ribbon</td>
               <td>Buy for 999,999 pokemonies at the Ribbon Syndicate; located in the Resort Area</td>
             </tr>
             <tr>
-              <td>83</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck83" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck83">83</label>
+                </div>
+              </td>
               <td>Footprint Ribbon</td>
               <td>Show mon to Dr. Footprint on Route 213</td>
             </tr>
             <tr>
-              <td>84</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck84">84</label>
+                </div>
+              </td>
               <td>Best Friends Ribbon</td>
               <td>Show mon with max affection in Hearthome City</td>
             </tr>
           </tbody>
         </table>
+
+        <button type="button" value="selectAll" class="button" onclick="checkAll()">Select All</button>
+        <button type="button" value="deselectAll" class="button" onclick="uncheckAll()">Clear</button>
 
       </div>
     </section>
