--- a/pkmn_hgss.html
+++ b/pkmn_hgss.html
@@ -49,49 +49,84 @@
           </thead>
           <tbody>
             <tr>
-              <td>48</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck48" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck48">48</label>
+                </div>
+              </td>
               <td>Ability Ribbon</td>
               <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)
                   **Note: Can also be done in DPPt
               </td>
             </tr>
             <tr>
-              <td>49</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck49" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck49">49</label>
+                </div>
+              </td>
               <td>Great Ability Ribbon</td>
               <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)
                   **Note: Can also be done in DPPt
               </td>
             </tr>
             <tr>
-              <td>50</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck50" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck50">50</label>
+                </div>
+              </td>
               <td>Double Ability Ribbon</td>
               <td>Win 50 consecutive battles in Battle Tower Doubles
                   **Note: Can also be done in DPPt
               </td>
             </tr>
             <tr>
-              <td>51</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck51" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck51">51</label>
+                </div>
+              </td>
               <td>Multi Ability Ribbon</td>
               <td>Win 50 consecutive battles in Battle Tower Multi.
                   **Note: Can also be done in DPPt
               </td>
             </tr>
             <tr>
-              <td>52</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck52" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck52">52</label>
+                </div>
+              </td>
               <td>Pair Ability Ribbon</td>
               <td>Win 50 consecutive battles in Battle Tower Link Multi.
                   **Note: Can also be done in DPPt
               </td>
             </tr>
             <tr>
-              <td>53</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck53" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck53">53</label>
+                </div>
+              </td>
               <td>World Ability Ribbon</td>
               <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge
                   **Note: Can also be done in DPPt
               </td>
             </tr>
             <tr>
-              <td>54</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck54" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck54">54</label>
+                </div>
+              </td>
               <td>Legend Ribbon</td>
               <td>Defeat Red</td>
             </tr>
@@ -110,7 +145,12 @@
           </thead>
           <tbody>
             <tr>
-              <td></td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck000" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck000"></label>
+                </div>
+              </td>
               <td>Shiny Crown</td>
               <td>Talk to Ethan/Lyra after getting 5 Shiny Leaves on the mon</td>
             </tr>
@@ -129,56 +169,96 @@
             </thead>
             <tbody>
               <tr>
-                <td>72</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                  </div>
+                </td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs in Blackthorn City
                     **Note: Can also be done in RSE, DPPt, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
               <tr>
-                <td>73</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck73" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck73">73</label>
+                  </div>
+                </td>
                 <td>Alert Ribbon</td>
                 <td>Show mon on Monday at Route 40
                     **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
-                <td>74</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck74" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck74">74</label>
+                  </div>
+                </td>
                 <td>Shock Ribbon</td>
                 <td>Show mon on Tuesday at Route 29
                     **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
-                <td>75</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck75" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck75">75</label>
+                  </div>
+                </td>
                 <td>Downcast Ribbon</td>
                 <td>Show mon on Wednesday at Lake of Rage
                     **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
-                <td>76</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck76" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck76">76</label>
+                  </div>
+                </td>
                 <td>Careless Ribbon</td>
                 <td>Show mon on Thursday in Route 36
                     **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
-                <td>77</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck77" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck77">77</label>
+                  </div>
+                </td>
                 <td>Relax Ribbon</td>
                 <td>Show mon on Friday in Route 32
                     **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
-                <td>78</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck78" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck78">78</label>
+                  </div>
+                </td>
                 <td>Snooze Ribbon</td>
                 <td>Show mon on Saturday in Blackthorn City
                     **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
-                <td>79</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck79" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck79">79</label>
+                  </div>
+                </td>
                 <td>Smile Ribbon</td>
                 <td>Show mon on Sunday at Route 37
                     **Note: Can also be done in DPPt, XY, ORAS & BDSP
