--- a/pkmn_oras.html
+++ b/pkmn_oras.html
@@ -49,56 +49,104 @@
           </thead>
           <tbody>
             <tr>
-              <td>56</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck56" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck56">56</label>
+                </div>
+              </td>
               <td>Training Ribbon</td>
               <td>Show a woman in Cafe Ultimo in Luminose City (XY) or the black belt in front of the Pokemon Center 
                   in Dewford Town (ORAS) a Supremely Trained Pokemon. **Note: Can also be done in X & Y</td>
             </tr>
             <tr>
-              <td>57</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck57" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck57">57</label>
+                </div>
+              </td>
               <td>Skillful Battler Ribbon</td>
               <td>Defeat a Battle Chatelaine **Note: Can also be done in X & Y
               </td>
             </tr>
             <tr>
-              <td>58</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck58" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck58">58</label>
+                </div>
+              </td>
               <td>Expert Battler Ribbon</td>
               <td>Defeat a Battle Chatelaine in a Super Battle
                   **Note: Can also be done in X & Y
               </td>
             </tr>
             <tr>
-              <td>59</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck59" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck59">59</label>
+                </div>
+              </td>
               <td>Hoenn Champion Ribbon</td>
               <td>Defeat the Hoenn Elite 4</td>
             </tr>
             <tr>
-              <td>60</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck60" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck60">60</label>
+                </div>
+              </td>
               <td>Coolness Master Ribbon</td>
               <td>Win Cool Contest Spectacular Master Rank</td>
             </tr>
             <tr>
-              <td>61</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck61" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck61">61</label>
+                </div>
+              </td>
               <td>Beauty Master Ribbon</td>
               <td>Win Beauty Contest Spectacular Master Rank</td>
             </tr>
             <tr>
-              <td>62</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck62" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck62">62</label>
+                </div>
+              </td>
               <td>Cuteness Master Ribbon</td>
               <td>Win Cuteness Contest Spectacular Master Rank</td>
             </tr>
             <tr>
-              <td>63</td>
+              <td><div class="custom-control custom-checkbox">
+                <input type="checkbox" class="custom-control-input" id="tableDefaultCheck63" name="ribbon">
+                <label class="custom-control-label" for="tableDefaultCheck63">63</label>
+              </div></td>
               <td>Cleverness Master Ribbon</td>
               <td>Win Cleverness Contest Spectacular Master Rank</td>
             </tr>
             <tr>
-              <td>64</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck64" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck64">64</label>
+                </div>
+              </td>
               <td>Toughness Ribbon</td>
               <td>Win Toughness Contest Spectacular Master Rank</td>
             </tr>
             <tr>
-              <td>65</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck65" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck65">65</label>
+                </div>
+              </td>
               <td>Contest Star Ribbon</td>
               <td>Win in all five Master Rank categories</td>
             </tr>
@@ -117,91 +165,156 @@
             </thead>
             <tbody>
               <tr>
-                <td>72</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                  </div>
+                </td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs at Slateport Market
                     **Note: Can also be done in RSE, DPPt, HGSS, XY, USUM, SwSh & BDSP
                 </td>
               </tr>
               <tr>
-                <td>73</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck73" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck73">73</label>
+                  </div>
+                </td>
                 <td>Alert Ribbon</td>
                 <td>Show mon on Monday in Mauville Hills
                     **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
-                <td>74</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck74" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck74">74</label>
+                  </div>
+                </td>
                 <td>Shock Ribbon</td>
                 <td>Show mon on Tuesday in Mauville Hills
                     **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
-                <td>75</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck75" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck75">75</label>
+                  </div>
+                </td>
                 <td>Downcast Ribbon</td>
                 <td>Show mon on Wednesday in Mauville Hills
                     **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
-                <td>76</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck76" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck76">76</label>
+                  </div>
+                </td>
                 <td>Careless Ribbon</td>
                 <td>Show mon on Thursday in Mauville Hills
                     **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
-                <td>77</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck77" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck77">77</label>
+                  </div>
+                </td>
                 <td>Relax Ribbon</td>
                 <td>Show mon on Friday in Mauville Hills
                     **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
-                <td>78</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck78" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck78">78</label>
+                  </div>
+                </td>
                 <td>Snooze Ribbon</td>
                 <td>Show mon on Saturday in Mauville Hills
                     **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
-                <td>79</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck79" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck79">79</label>
+                  </div>
+                </td>
                 <td>Smile Ribbon</td>
                 <td>Show mon on Sunday in Mauville Hills
                     **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
-                <td>80</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck80" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck80">80</label>
+                  </div>
+                </td>
                 <td>Gorgeous Ribbon</td>
                 <td>Buy for 10,000 pokemonies in Mauville City
                     **Note: Can also be done in DPPt & BDSP
                 </td>
               </tr>
               <tr>
-                <td>81</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck81" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck81">81</label>
+                  </div>
+                </td>
                 <td>Royal Ribbon</td>
                 <td>Buy for 100,000 pokemonies in Mauville City
                     **Note: Can also be done in DPPt & BDSP
                 </td>
               </tr>
               <tr>
-                <td>82</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck82" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck82">82</label>
+                  </div>
+                </td>
                 <td>Gorgeous Royal Ribbon</td>
                 <td>Buy for 999,999 pokemonies in Mauville City
                     **Note: Can also be done in DPPt & BDSP
                 </td>
               </tr>
               <tr>
-                <td>83</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck83" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck83">83</label>
+                  </div>
+                </td>
                 <td>Footprint Ribbon</td>
                 <td>Show mon 30 levels higher than caught/received level in Battle Resort
                   **Note: Can also be done in DPPt, XY, USUM & BDSP
                 </td>
               </tr>
               <tr>
-                <td>84</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck84">84</label>
+                  </div>
+                </td>
                 <td>Best Friends Ribbon</td>
                 <td>Show mon with max affection in Mauville Hills
                     **Note: Can also be done in XY, USUM, SwSh & BDSP
