--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -49,122 +49,242 @@
             </thead>
             <tbody>
               <tr>
-                <td>3</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck3" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck3">3</label>
+                  </div>
+                </td>
                 <td>Champion Ribbon</td>
                 <td>Defeat the Elite 4 in Hoenn **Note: Can also be done in Pokemon FRLG</td>
               </tr>
               <tr>
-                <td>4</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck4" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck4">4</label>
+                  </div>
+                </td>
                 <td>Cool Ribbon</td>
                 <td>Win Cool Contest Normal Rank</td>
               </tr>
               <tr>
-                <td>5</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck5" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck5">5</label>
+                  </div>
+                </td>
                 <td>Cool Super Ribbon</td>
                 <td>Win Cool Contest Super Rank</td>
               </tr>
               <tr>
-                <td>6</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck6" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck6">6</label>
+                  </div>
+                </td>
                 <td>Cool Hyper Ribbon</td>
                 <td>Win Cool Contest Hyper Rank</td>
               </tr>
               <tr>
-                <td>7</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck7" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck7">7</label>
+                  </div>
+                </td>
                 <td>Cool Master Ribbon</td>
                 <td>Win Cool Contest Master Rank</td>
               </tr>
               <tr>
-                <td>8</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck8" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck8">8</label>
+                  </div>
+                </td>
                 <td>Beauty Ribbon</td>
                 <td>Win Beauty Contest Normal Rank</td>
               </tr>
               <tr>
-                <td>9</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck9" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck9">9</label>
+                  </div>
+                </td>
                 <td>Beauty Super Ribbon</td>
                 <td>Win Beauty Contest Super Rank</td>
               </tr>
               <tr>
-                <td>10</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck10" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck10">10</label>
+                  </div>
+                </td>
                 <td>Beauty Hyper Ribbon</td>
                 <td>Win Beauty Contest Hyper Rank</td>
               </tr>
               <tr>
-                <td>11</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck11" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck11">11</label>
+                  </div>
+                </td>
                 <td>Beauty Master Ribbon</td>
                 <td>Win Beauty Contest Master Rank</td>
               </tr>
               <tr>
-                <td>12</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck12" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck12">12</label>
+                  </div>
+                </td>
                 <td>Cute Ribbon</td>
                 <td>Win Cute Contest Normal Rank</td>
               </tr>
               <tr>
-                <td>13</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck13" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck13">13</label>
+                  </div>
+                </td>
                 <td>Cute Super Ribbon</td>
                 <td>Win Cute Contest Super Rank</td>
               </tr>
               <tr>
-                <td>14</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck14" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck14">14</label>
+                  </div>
+                </td>
                 <td>Cute Hyper Ribbon</td>
                 <td>Win Cute Contest Hyper Rank</td>
               </tr>
               <tr>
-                <td>15</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck15" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck15">15</label>
+                  </div>
+                </td>
                 <td>Cute Master Ribbon</td>
                 <td>Win Cute Contest Master Rank</td>
               </tr>
               <tr>
-                <td>16</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck16" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck16">16</label>
+                  </div>
+                </td>
                 <td>Smart Ribbon</td>
                 <td>Win Smart Contest Normal Rank</td>
               </tr>
               <tr>
-                <td>17</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck17" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck17">17</label>
+                  </div>
+                </td>
                 <td>Smart Super Ribbon</td>
                 <td>Win Smart Contest Super Rank</td>
               </tr>
               <tr>
-                <td>18</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck18" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck18">18</label>
+                  </div>
+                </td>
                 <td>Smart Hyper Ribbon</td>
                 <td>Win Smart Contest Hyper Rank</td>
               </tr>
               <tr>
-                <td>19</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck19" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck19">19</label>
+                  </div>
+                </td>
                 <td>Smart Master Ribbon</td>
                 <td>Win Smart Contest Master Rank</td>
               </tr>
               <tr>
-                <td>20</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck20" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck201">20</label>
+                  </div>
+                </td>
                 <td>Tough Ribbon</td>
                 <td>Win Tough Contest Normal Rank</td>
               </tr>
               <tr>
-                <td>21</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck21" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck21">21</label>
+                  </div>
+                </td>
                 <td>Tough Super Ribbon</td>
                 <td>Win Tough Contest Super Rank</td>
               </tr>
               <tr>
-                <td>22</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck22" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck22">22</label>
+                  </div>
+                </td>
                 <td>Tough Hyper Ribbon</td>
                 <td>Win Tough Contest Hyper Rank</td>
               </tr>
               <tr>
-                <td>23</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck23" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck23">23</label>
+                  </div>
+                </td>
                 <td>Tough Master Ribbon</td>
                 <td>Win Tough Contest Master Rank</td>
               </tr>
               <tr>
-                <td>24</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck24" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck24">24</label>
+                  </div>
+                </td>
                 <td>Artist Ribbon</td>
                 <td>Beat Master Rank with a high score</td>
               </tr>
               <tr>
-                <td>25</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck25" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck25">25</label>
+                  </div>
+                </td>
                 <td>Winning Ribbon</td>
                 <td>Clear the Battle Tower's Lv. 50 challenge</td>
               </tr>
               <tr>
-                <td>26</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck26" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck26">26</label>
+                  </div>
+                </td>
                 <td>Victory Ribbon</td>
                 <td>Clear the Battle Tower's Lv. 100 challenge (RS) or Open Level challenge (E)</td>
               </tr>
@@ -183,7 +303,12 @@
             </thead>
             <tbody>
               <tr>
-                <td>72</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                  </div>
+                </td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs at Slateport Market
                     **Note: Can also be done in DPPt, HGSS, XY, ORAS, USUM, SwSh & BDSP
@@ -191,6 +316,9 @@
               </tr>
             </tbody>
           </table>
+
+          <button type="button" value="selectAll" class="button" onclick="checkAll()">Select All</button>
+          <button type="button" value="deselectAll" class="button" onclick="uncheckAll()">Clear</button>
   
         </div>
       </section>
