--- a/pkmn_swsh.html
+++ b/pkmn_swsh.html
@@ -49,17 +49,32 @@
           </thead>
           <tbody>
             <tr>
-              <td>85</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck84">85</label>
+                </div>
+              </td>
               <td>Galar Champion Ribbon</td>
               <td>Win the Champion Cup</td>
             </tr>
             <tr>
-              <td>86</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck84">86</label>
+                </div>
+              </td>
               <td>Tower Master Ribbon</td>
               <td>Defeat Leon in Master Ball Rank in the Battle Tower</td>
             </tr>
             <tr>
-              <td>87</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck84">87</label>
+                </div>
+              </td>
               <td>Master Rank Ribbon</td>
               <td>Defeat a Master Ball Rank trainer in Ranked Battle</td>
             </tr>
@@ -78,14 +93,24 @@
             </thead>
             <tbody>
               <tr>
-                <td>72</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                  </div>
+                </td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs at in Hammerlocke
                     **Note: Can also be done in RSE, DPPt, HGSS, XY, USUM & BDSP
                 </td>
               </tr>
               <tr>
-                <td>84</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck84">84</label>
+                  </div>
+                </td>
                 <td>Best Friends Ribbon</td>
                 <td>Show mon with max affection in Prism Tower
                     **Note: Can also be done in XY, ORAS, USUM & BDSP
