--- a/pkmn_usum.html
+++ b/pkmn_usum.html
@@ -49,22 +49,42 @@
           </thead>
           <tbody>
             <tr>
-              <td>66</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck66" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck66">66</label>
+                </div>
+              </td>
               <td>Alola Champion Ribbon</td>
               <td>Defeat the Alola Elite 4</td>
             </tr>
             <tr>
-              <td>67</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck67" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck67">67</label>
+                </div>
+              </td>
               <td>Battle Royal Master Ribbon</td>
               <td>Win a Master Rank Battle Royal</td>
             </tr>
             <tr>
-              <td>68</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck68" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck68">68</label>
+                </div>
+              </td>
               <td>Battle Tree Great Ribbon</td>
               <td>Defeat a Battle Legend</td>
             </tr>
             <tr>
-              <td>69</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck69" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck69">69</label>
+                </div>
+              </td>
               <td>Battle Tree Master Ribbon</td>
               <td>Defeat Battle Legend in a Super Battle</td>
             </tr>
@@ -83,21 +103,36 @@
             </thead>
             <tbody>
               <tr>
-                <td>72</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                  </div>
+                </td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs at in Battle Royal Dome
                     **Note: Can also be done in RSE, DPPt, HGSS, XY, ORAS, SwSh & BDSP
                 </td>
               </tr>
               <tr>
-                <td>83</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck83" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck83">83</label>
+                  </div>
+                </td>
                 <td>Footprint Ribbon</td>
                 <td>Show mon 30 levels higher than caught/received level in Hano Grand Resort
                   **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
-                <td>84</td>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck84">84</label>
+                  </div>
+                </td>
                 <td>Best Friends Ribbon</td>
                 <td>Show mon with max affection in Malie City
                     **Note: Can also be done in XY, ORAS, SwSh & BDSP
