--- a/pkmn_xy.html
+++ b/pkmn_xy.html
@@ -49,24 +49,44 @@
           </thead>
           <tbody>
             <tr>
-              <td>55</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck55" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck55">55</label>
+                </div>
+              </td>
               <td>Kalos Champion Ribbon</td>
               <td>Defeat the Kalos Elite 4</td>
             </tr>
             <tr>
-              <td>56</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck56" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck56">56</label>
+                </div>
+              </td>
               <td>Training Ribbon</td>
               <td>Show a woman in Cafe Ultimo in Luminose City (XY) or the black belt in front of the Pokemon Center 
                   in Dewford Town (ORAS) a Supremely Trained Pokemon. **Note: Can also be done in ORAS</td>
             </tr>
             <tr>
-              <td>57</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck57" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck57">57</label>
+                </div>
+              </td>
               <td>Skillful Battler Ribbon</td>
               <td>Defeat a Battle Chatelaine **Note: Can also be done in ORAS
               </td>
             </tr>
             <tr>
-              <td>58</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck58" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck58">58</label>
+                </div>
+              </td>
               <td>Expert Battler Ribbon</td>
               <td>Defeat a Battle Chatelaine in a Super Battle
                   **Note: Can also be done in ORAS
@@ -87,84 +107,144 @@
           </thead>
           <tbody>
             <tr>
-              <td>70</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck70" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck70">70</label>
+                </div>
+              </td>
               <td>Contest Memory Ribbon</td>
               <td>Contest ribbons from previous gens are condensed upon transfer. If the mon has all 40, becomes gold
                 **Note: Can also be acquired in ORAS & USUM
               </td>
             </tr>
             <tr>
-              <td>71</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck71" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck71">71</label>
+                </div>
+              </td>
               <td>Battle Memory Ribbon</td>
               <td>Tower ribbons from previous gens are condensed upon transfer. If the mon has all 8, becomes gold
                 **Note: Can also be acquired in ORAS & USUM
               </td>
             </tr>
             <tr>
-              <td>72</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck72" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck72">72</label>
+                </div>
+              </td>
               <td>Effort Ribbon</td>
               <td>Show mon with 510 EVs in Laverre City
                   **Note: Can also be done in RSE, DPPt, HGSS, ORAS, USUM, SwSh & BDSP
               </td>
             </tr>
             <tr>
-              <td>73</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck73" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck73">73</label>
+                </div>
+              </td>
               <td>Alert Ribbon</td>
               <td>Show mon on Monday in Hotel Ambrette
                   **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
               </td>
             </tr>
             <tr>
-              <td>74</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck74" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck74">74</label>
+                </div>
+              </td>
               <td>Shock Ribbon</td>
               <td>Show mon on Tuesday in Hotel Camphrier
                   **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
               </td>
             </tr>
             <tr>
-              <td>75</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck75" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck75">75</label>
+                </div>
+              </td>
               <td>Downcast Ribbon</td>
               <td>Show mon on Wednesday in Hotel Marine Snow
                   **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
               </td>
             </tr>
             <tr>
-              <td>76</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck76" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck76">76</label>
+                </div>
+              </td>
               <td>Careless Ribbon</td>
               <td>Show mon on Thursday in Hotel Coumarine
                   **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
               </td>
             </tr>
             <tr>
-              <td>77</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck77" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck77">77</label>
+                </div>
+              </td>
               <td>Relax Ribbon</td>
               <td>Show mon on Friday in Hotel Couriway
                   **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
               </td>
             </tr>
             <tr>
-              <td>78</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck78" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck78">78</label>
+                </div>
+              </td>
               <td>Snooze Ribbon</td>
               <td>Show mon on Saturday in Hotel Cyllage
                   **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
               </td>
             </tr>
             <tr>
-              <td>79</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck79" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck79">79</label>
+                </div>
+              </td>
               <td>Smile Ribbon</td>
               <td>Show mon on Sunday in Hotel Coumarine
                   **Note: Can also be done in DPPt, HGSS, ORAS & BDSP
               </td>
             </tr>
             <tr>
-              <td>83</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck83" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck83">83</label>
+                </div>
+              </td>
               <td>Footprint Ribbon</td>
               <td>	Show mon 30 levels higher than caught/received level in Shalour City
                 **Note: Can also be done in DPPt, ORAS, USUM & BDSP
               </td>
             </tr>
             <tr>
-              <td>84</td>
+              <td>
+                <div class="custom-control custom-checkbox">
+                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck84" name="ribbon">
+                  <label class="custom-control-label" for="tableDefaultCheck84">84</label>
+                </div>
+              </td>
               <td>Best Friends Ribbon</td>
               <td>Show mon with max affection in Prism Tower
                   **Note: Can also be done in ORAS, USUM, SwSh & BDSP
